# lib2k

./: .gitignore  CMakeLists.txt  README.md  dependencies.cmake  lib2k-config.cmake  project_options.cmake
.github/workflows/: ci.yml
src/: CMakeLists.txt  file_utils.cpp  random.cpp  string_utils.cpp  utf8.cpp
src/include/lib2k/: concepts.hpp  defer.hpp  file_utils.hpp  non_null_owner.hpp  overloaded.hpp  pinned.hpp  random.hpp  static_string.hpp  static_vector.hpp  string_utils.hpp  synchronized.hpp  types.hpp  unique_value.hpp  utf8.hpp
src/include/lib2k/utf8/: char.hpp  const_iterator.hpp  const_reverse_iterator.hpp  errors.hpp  literals.hpp  string.hpp  string_view.hpp
src/utf8/: char.cpp  const_iterator.cpp  const_reverse_iterator.cpp  literals.cpp  string.cpp  string_view.cpp
test/: CMakeLists.txt  defer_tests.cpp  file_utils_tests.cpp  non_null_owner_tests.cpp  overloaded_tests.cpp  pinned_tests.cpp  random_tests.cpp  static_string_tests.cpp  static_vector_tests.cpp  string_utils_tests.cpp  synchronized_tests.cpp  types_tests.cpp  unique_value_tests.cpp  utf8_tests.cpp
test/utf8/: utf8char_tests.cpp  utf8iterator_tests.cpp  utf8string_tests.cpp  utf8string_view_tests.cpp
